// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly name 1`] = `
<input
  className=""
  name="zipCode"
  onChange={[Function]}
  pattern="[0-9]*"
  placeholder="Enter Your Zip Code"
  type="text"
/>
`;

exports[`renders correctly name and error message 1`] = `
Array [
  <p
    className="search-input-message--error"
  >
    foo errors
  </p>,
  <input
    className="error"
    name="12345"
    onChange={[Function]}
    pattern="[0-9]*"
    placeholder="Enter Your Zip Code"
    type="text"
  />,
]
`;

exports[`renders correctly name and pattern 1`] = `
<input
  className=""
  name="12345"
  onChange={[Function]}
  pattern="[a-z]*"
  placeholder="Enter Your Zip Code"
  type="text"
/>
`;

exports[`renders correctly name and placeholder 1`] = `
<input
  className=""
  name="12345"
  onChange={[Function]}
  pattern="[0-9]*"
  placeholder="foo errors"
  type="text"
/>
`;
